<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_modules"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_modules" />
    <item
        android:id="@+id/nav_tasks"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_tasks" />
    <item
        android:id="@+id/nav_timetable"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_timetable" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
